--- a/Develop/index.html
+++ b/Develop/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <!-- changed to a better webpage title than "website" -->
     <title>Horiseon Social Solutions</title>
 </head>
